<?xml version="1.0"?>
<package>
  <name>my_following_line_package</name>
  <version>0.0.0</version>
  <description>The my_following_line_package package</description>
  
<maintainer email="husarion@todo.todo">husarion</maintainer>
<license>TODO</license>
  
<buildtool_depend>catkin</buildtool_depend>
<build_depend>rospy</build_depend>
<run_depend>rospy</run_depend>
  
